--- a/src/section/style/skills.css
+++ b/src/section/style/skills.css
@@ -1,3 +1,7 @@
+.skills{
+	margin-top: 30px;
+}
+
 h1.columnTitle{
 	font-size: 32px;
 	text-align: left;
@@ -22,9 +26,12 @@ li.listItem{
 
 @media screen and (max-width: 820px) {
 
+	.skills{
+		margin-top: 50px;
+	}
+
 	h1.columnTitle{
 		height: 75px;
 		margin-top: 25px;
 	}
-
 }
